# toy-issues-with-github-actions

./: .env-public  .gitignore  CURRENT-PROBLEMS.md  README.md  commit_message.txt  main.py  pyproject.toml
.github/workflows/: llmops-issue-resolver.yml
issues/1/: index.md
src/app/: main.py
src/app/core/: config.py
src/app/routers/: auth.py  items.py
src/app/schemas/: auth.py  item.py
src/app/services/: auth_service.py  item_service.py
src/app/utils/: auth.py
