[project]
name = "toy-issues-with-github-actions"
version = "0.1.0"
description = """
                A toy project to demonstrate automatic resolution of LLMOps issues with GitHub Actions.
            """
requires-python = "==3.9.0"
readme = "README.md"
authors = [
    { name = "Bruno Scaglione", email = "bruno.c.scaglione@gmail.com" }
]
license = {file = "LICENSE"}
dependencies = [
    "llmops-issue-resolver>=0.1.1",
]

[[tool.uv.index]]
url = "https://test.pypi.org/simple/"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple/"

